--- a/2nd/index.html
+++ b/2nd/index.html
@@ -4,21 +4,104 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="index.css">
 </head>
 <body>
-    <form action="">
-      <label for="name">Name:</label>
-      <input type="text" name="" id="">
-      <label for="type">Type:</label>
-        <select name="type" id="type">
-          <option value="Beach">Beach</option>
-          <option value="Hills">Hills</option>
-          <option value="Fountain">Fountain</option>
-          <option value="Landmark">Landmark</option>
-        </select>
-        <br><br>
-        <label for="picture">Picture:</label>
-        <input type="file" name="" id="">
+  <div class="all-container">
+    <form class="search-type">
+      <input type="text" placeholder="Enter name to search" class="search-holder">
     </form>
+  
+    <div class="container">
+      <div class="item-container">
+        <div class="heading-container">
+          <h1>
+            Name
+          </h1>
+        </div>
+        <div class="jhamela-grp">
+          <p>
+            Lalbagh Fort
+          </p>
+        </div>
+        <div class="jhamela-grp">
+          <p>
+            Mahasthan Gor
+          </p>
+        </div>
+      </div>
+      <div class="item-container">
+        <div class="heading-container">
+          <h1>
+            Address
+          </h1>
+        </div>
+        <div class="jhamela-grp">
+          <p>
+            Lalbagh
+          </p>
+        </div>
+        <div class="jhamela-grp">
+          <p>
+            Comilla
+          </p>
+        </div>
+      </div>
+      <div class="item-container">
+        <div class="heading-container">
+          <h1>
+            Rating
+          </h1>
+        </div>
+        <div class="jhamela-grp">
+          <p>
+            1
+          </p>
+        </div>
+        <div class="jhamela-grp">
+          <p>
+            1
+          </p>
+        </div>
+      </div>
+      <div class="item-container">
+        <div class="heading-container">
+          <h1>
+            Picture
+          </h1>
+        </div>
+        <div  class="jhamela-grp">
+          <img src="../istockphoto-1145414743-1024x1024 (3).jpg" class="image-container" alt="">
+        </div>
+        <div class="jhamela-grp">
+          <p>
+            <img src="../istockphoto-1369772183-1024x1024 (1).jpg" class="image-container" alt="">
+          </p>
+        </div>
+      </div>
+      <div class="item-container">
+        <div class="heading-container">
+          <h1>
+            Action
+          </h1>
+        </div>
+        <div class="jhamela-grp">
+          <div class="buttons">
+            <button type="Update">Update</button>
+            <button type="Delete">Delete</button>
+        </div>
+        </div>
+        <div class="jhamela-grp">
+          <div class="buttons">
+            <button type="Update">Update</button>
+            <button type="Delete">Delete</button>
+        </div>
+        </div>
+      </div>
+    </div>
+      <div class="btn-create">
+        <button type="Create New Tourist Place">Create New Tourist Place</button>
+      </div>
+  </div>
 </body>
 </html>
