--- a/2nd/index.html
+++ b/2nd/index.html
@@ -100,7 +100,8 @@
       </div>
     </div>
       <div class="btn-create">
-        <button type="Create New Tourist Place">Create New Tourist Place</button>
+        <a href=".//index.css"> <button type="Create New Tourist Place">Create New Tourist Place</button></a>
+        
       </div>
   </div>
 </body>
